# Mantis

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  PROJECT.md  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  mantis.sh  release.sh  settings.gradle.kts
backend/: ARCHITECTURE.md  Cargo.toml
backend/src/: api.rs  main.rs  models.rs  proxy.rs  storage.rs  workspace.rs
composeApp/: build.gradle.kts
composeApp/src/commonMain/kotlin/com/mockmaster/app/: App.kt  Theme.kt
composeApp/src/commonMain/kotlin/com/mockmaster/app/api/: MockMasterApi.kt
composeApp/src/commonMain/kotlin/com/mockmaster/app/platform/: Files.kt  LocalStorage.kt
composeApp/src/commonMain/kotlin/com/mockmaster/app/state/: AppState.kt
composeApp/src/commonMain/kotlin/com/mockmaster/app/ui/: AppScaffold.kt  Common.kt  DocsScreen.kt  FlowsScreen.kt  FoldersScreen.kt  LoginScreen.kt  LogsScreen.kt  RuleEditorDialog.kt  SettingsScreen.kt
composeApp/src/wasmJsMain/kotlin/com/mockmaster/app/: LiveLogStream.wasmJs.kt  Main.kt
composeApp/src/wasmJsMain/kotlin/com/mockmaster/app/platform/: Files.wasmJs.kt  LocalStorage.wasmJs.kt
composeApp/src/wasmJsMain/resources/: index.html
docker/: supervisord.conf
gradle/: libs.versions.toml
shared/: build.gradle.kts
shared/src/commonMain/kotlin/com/mockmaster/shared/: Models.kt
